# 4-agents

./: GUIA_DESDE_CERO.md  README.md  er_design.json  final_artifacts.json  inception.json  pyproject.toml  requirements.json  setup.py  test_pdf.py  test_pdf2.py  user_stories.json
examples/: input_brief.json
src/multi_agent_pipeline/: __init__.py  agents.py  cli.py  llm.py  orchestrator.py  schemas.py  streamlit_app.py
src/multi_agent_se_artifacts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
